Fixed issues with navigation bar: made search bar wider, removed collapsing of top search bar, created bottom search bar, and fixed transition from top to bottom nav bar

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,7 @@ code {
   border-radius: 30px;
   border: medium solid white;
 }
+
+.search-bar-set-width {
+  width: 50%;
+}
